Adding more warnings in Eclipse, further code cleanup.